<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="40dp"
    android:orientation="vertical">

    <!-- Nội dung hướng dẫn -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/huong_dan_su_dung"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingBottom="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buoc_1"
                android:textSize="16sp"
                android:paddingBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buoc_2"
                android:textSize="16sp"
                android:paddingBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buoc_3"
                android:textSize="16sp"
                android:paddingBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buoc_4"
                android:textSize="16sp"
                android:paddingBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buoc_5"
                android:textSize="16sp"
                android:paddingBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buoc_6"
                android:textSize="16sp"
                android:paddingBottom="8dp"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>