<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomNav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/bntSetting"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/cai_dat"
        android:src="@drawable/ic_setting"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <LinearLayout
        android:id="@+id/bottomNav"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="#FFFFFF"
        android:weightSum="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


            <!-- Navigation items -->
            <LinearLayout
                android:id="@+id/bntHuongDan"
                android:background="?attr/selectableItemBackground"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView android:src="@android:drawable/ic_menu_info_details"
                    android:layout_width="24dp"
                    android:layout_height="24dp" />
                <TextView android:text="@string/huong_dan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bntThongKe"
                android:background="?attr/selectableItemBackground"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView android:src="@android:drawable/ic_menu_sort_by_size"
                    android:layout_width="24dp"
                    android:layout_height="24dp" />

                <TextView android:text="@string/thong_ke"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:id="@+id/bntAlbum"
                android:background="?attr/selectableItemBackground"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView android:src="@android:drawable/ic_menu_gallery"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:tint="@color/purple_500"
                    android:elevation="4dp"/>
                <TextView android:text="@string/album"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:textColor="@color/purple_500"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bntTraCuu"
                android:background="?attr/selectableItemBackground"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView android:src="@drawable/ic_lookup"
                    android:layout_width="24dp"
                    android:layout_height="24dp" />
                <TextView android:text="@string/tra_cuu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bntThoat"
                android:background="?attr/selectableItemBackground"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView android:src="@android:drawable/ic_lock_power_off"
                    android:layout_width="24dp"
                    android:layout_height="24dp" />
                <TextView android:text="@string/dang_xuat"
                    android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp" />
            </LinearLayout>
        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
